# TurboFire

./: .gitignore  EXAMPLES.md  GUI_README.md  HU_RANGES.txt  README.md  TEST_EXAMPLES.txt  TurboFire.cpp  example_ranges.sh  makefile  output.txt  test_example.sh  test_grid_format.txt  test_range.sh
dcfr/: dcfr.py
include/: GUI.h  HandRanks.h  MCCFR.h  RangeParser.h  ranks.h
mccfr/: kuhn.c  kuhn2.c  leduc.c  leduc2.c  leduc_solver.nocomp  nlh-ex.c  nlh.c  rps-ex.c  rps-ex2.c
notes/: ai_usage_notes.txt  hash_fix.md  write-up-notes-20260219.txt
rangefinder/: README.md  pyproject.toml
rangefinder/src/rangefinder/: __init__.py  __main__.py  app.py  grid.py  range_io.py
slop/2026-02-05-test/: mccfr.c  mccfr_pseudocode.txt
slop/2026-02-12-test/poker_solver/: Makefile  README.md
slop/2026-02-12-test/poker_solver/include/: actions.h  cards.h  evaluator.h  game_state.h  mccfr.h  strategy.h
slop/2026-02-12-test/poker_solver/src/: actions.c  cards.c  evaluator.c  game_state.c  generate_table.c  main.c  mccfr.c  strategy.c
slop/2026-02-12-test/poker_solver_2/: CMakeLists.txt  IMPLEMENTATION_PLAN.md
slop/2026-02-12-test/poker_solver_2/src/: debug_grid.cpp  debug_solver.cpp  main.cpp  test_grid_colors.cpp  test_hand_mapping.cpp  test_solver.cpp
slop/2026-02-12-test/poker_solver_2/src/app/: poker_app.cpp  poker_app.h
slop/2026-02-12-test/poker_solver_2/src/card/: card.cpp  card.h  evaluator.cpp  evaluator.h  hand.cpp  hand.h
slop/2026-02-12-test/poker_solver_2/src/components/: action_panel.cpp  action_panel.h  grid.cpp  grid.h
slop/2026-02-12-test/poker_solver_2/src/core/: game_state.cpp  game_state.h
slop/2026-02-12-test/poker_solver_2/src/game/: action.cpp  action.h  board.cpp  board.h  game_tree.cpp  game_tree.h  range.cpp  range.h
slop/2026-02-12-test/poker_solver_2/src/solver/: abstraction.cpp  abstraction.h  cfr.cpp  cfr.h  solver.cpp  solver.h
slop/2026-02-12-test/poker_solver_2/src/storage/: serialize.cpp  serialize.h
slop/2026-02-12-test/poker_solver_2/src/tui/: app.cpp  app.h  colors.cpp  colors.h  components.cpp  components.h  grid.cpp  grid.h
slop/2026-02-12-test/poker_solver_2/test/: test_components.cpp
slop/2026-02-16-solver-opus/: BUILD_AND_RUN.md  CMakeLists.txt  README.md
slop/2026-02-16-solver-opus/include/core/: action.hpp  bet_sizing.hpp  card.hpp  game_state.hpp  hand.hpp  hand_evaluator.hpp  ranges.hpp  strategy.hpp
slop/2026-02-16-solver-opus/include/solver/: cfr_engine.hpp
slop/2026-02-16-solver-opus/include/ui/: interactive_range_display.hpp
slop/2026-02-16-solver-opus/src/: main.cpp
slop/2026-02-16-solver-opus/src/core/: game_state.cpp  hand.cpp  hand_evaluator.cpp
slop/2026-02-16-solver-opus/src/solver/: cfr_engine.cpp
slop/2026-02-16-solver-opus/src/ui/: interactive_range_display.cpp
slop/2026-02-16-solver/gto-solver/: CMakeLists.txt
slop/2026-02-16-solver/gto-solver/include/core/: game_state.hpp  hand_evaluator.hpp  ranges.hpp
slop/2026-02-16-solver/gto-solver/include/solver/: cfr_engine.hpp
slop/2026-02-16-solver/gto-solver/include/tree/: tree_builder.hpp  tree_node.hpp
slop/2026-02-16-solver/gto-solver/include/ui/: range_display.hpp
slop/2026-02-16-solver/gto-solver/src/: main.cpp
slop/2026-02-20-preflop/preflop/: makefile
slop/2026-02-20-preflop/preflop/include/: gto_solver.h  preflop_solver.h
slop/2026-02-20-preflop/preflop/src/: gto_solver.c  main.c  preflop_solver.c  range.c  test_preflop.c
src/: GUI.c  HandRankGen.c  MCCFR.c  Makefile  RangeParser.c  Simulator.c  TurboFire.c  cfr.c  cfr.h  dcfr.c  ex.h  flop_solver.c  flop_solver.h  flop_tui.c  gto_solver.c  gto_solver.h  indexer.c  indexer.h  main2.c  out  parse.c  parse.h  range.c  range.h  ranks.c  ranks.h  showdown.c  tree.c  tree.h  turbofire  turbofire.c
src2/: dcfr.c  evaluator.h  main.c  parse.h  tree.h
src_old/: evaluator.cpp  indexer.c  main.c  main2.c  showdown.h  tree.c
test/: rank_collision_test.c  solver_payout_test.c
